manifests/app/namespaces/core/product/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 8080
