manifests/app/namespaces/core/product/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  labels:
    name: product
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - product.setyaji.my.id
    secretName: product-tls
  rules:
  - host: product.setyaji.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: product
            port: 
              number: 80
